[package]
name = "kun-bot"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies.clap]
version = "4.3.11"
default-features = false
features = ["std", "derive", "help", "color", "usage", "error-context"]

[dependencies.rand]
version = "0.8.5"
default-features = false

[dependencies.serenity]
version = "0.11.6"
default-features = false
features = ["client", "gateway", "model", "rustls_backend", "standard_framework"]

[dependencies.tokio]
version = "1.29.1"
default-features = false
features = ["rt-multi-thread"]