[package]
name = "kun-bot"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies.clap]
version = "4.4.11"
default-features = false
features = ["std", "derive", "help", "color", "usage", "error-context"]

[dependencies.rand]
version = "0.8.5"
default-features = false

[dependencies.serenity]
version = "0.12.0"
default-features = false
features = ["client", "gateway", "model", "rustls_backend", "standard_framework"]

[dependencies.tokio]
version = "1.35.1"
default-features = false
features = ["rt-multi-thread"]

[dependencies.image]
version = "0.24.7"
default-features = false